--- a/LOC.PMS.Infrastructure/LOC.PMS.Infrastructure.csproj
+++ b/LOC.PMS.Infrastructure/LOC.PMS.Infrastructure.csproj
@@ -5,9 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Validators\Utility\**" />
+    <EmbeddedResource Remove="Validators\Utility\**" />
+    <None Remove="Validators\Utility\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.6" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.6" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
 
