Removed Console log and file log. Enabled DB and Json log.  We need to replace Json with to file log while going to production.

--- a/LOC.PMS.WebAPI/appsettings.json
+++ b/LOC.PMS.WebAPI/appsettings.json
@@ -14,16 +14,14 @@
       }
     },
     "WriteTo": [
-      {
-        "Name": "Console"
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "C:\\Ram\\LOC\\Development\\LOC2022\\Logs\\log.txt",
-          "outputTemplate": "{Timestamp} {Message}{NewLine:1}{Exception:1}"
-        }
-      },
+      //{
+      //  "Name": "File",
+      //  "Args": {
+      //    "path": "C:\\Ram\\LOC\\Development\\LOC2022\\Logs\\log.txt",
+      //    "outputTemplate": "{Timestamp} {Message}{NewLine:1}{Exception:1}"
+      //  }
+      //},
+      //------TODO----Enabling Json log for now, as we are in initial stage of development. but this is huge in size, We need to go back to file & Db back--------
       {
         "Name": "File",
         "Args": {
