--- a/LOC.PMS.WebAPI/appsettings.json
+++ b/LOC.PMS.WebAPI/appsettings.json
@@ -1,13 +1,56 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-QCM5AL0;Initial Catalog=ProductManagementDB;Integrated Security=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=PMS;Integrated Security=True;MultipleActiveResultSets=True"
+  },
+
+  "Serilog": {
+    "Using": [],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      //{
+      //  "Name": "File",
+      //  "Args": {
+      //    "path": "C:\\Ram\\LOC\\Development\\LOC2022\\Logs\\log.txt",
+      //    "outputTemplate": "{Timestamp} {Message}{NewLine:1}{Exception:1}"
+      //  }
+      //},
+      //------TODO----Enabling Json log for now, as we are in initial stage of development. but this is huge in size, We need to go back to file & Db back--------
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:\\Ram\\LOC\\Development\\LOC2022\\Logs\\log.json",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=PMS;Integrated Security=True;MultipleActiveResultSets=True",
+          "sinkOptionsSection": {
+            "tableName": "Logs",
+            "schemaName": "EventLogging",
+            "autoCreateSqlTable": true
+          },
+          "restrictedToMinimumLevel": "Warning"
+        }
+      }
+
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithProcessId",
+      "WithThreadId"
+    ],
+    "Properties": {
+      "ApplicationName": "LOC.PMS.WebAPI"
+    }
   }
 }
