--- a/LOC.PMS.Infrastructure/LOC.PMS.Infrastructure.csproj
+++ b/LOC.PMS.Infrastructure/LOC.PMS.Infrastructure.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
 
