--- a/LOC.PMS.WebAPI/appsettings.json
+++ b/LOC.PMS.WebAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=PMS;Integrated Security=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=DESKTOP-35F3DIE\\SQLEXPRESS;Initial Catalog=PMS;Integrated Security=True;MultipleActiveResultSets=True"
   },
 
   "Serilog": {
