--- a/LOC.PMS.WebAPI/LOC.PMS.WebAPI.csproj
+++ b/LOC.PMS.WebAPI/LOC.PMS.WebAPI.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="5.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
