Commit for initial membership and pallet flow - not entirely tested.

--- a/LOC.PMS.WebAPI/appsettings.json
+++ b/LOC.PMS.WebAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=PMS;Integrated Security=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=W10LRCADIRVELE\\MSSQL2019;Initial Catalog=PMS;Integrated Security=True;MultipleActiveResultSets=True"
   },
 
   "Serilog": {
@@ -32,7 +32,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=PMS;Integrated Security=True;MultipleActiveResultSets=True",
+          "connectionString": "Data Source=W10LRCADIRVELE\\MSSQL2019;Initial Catalog=PMS;Integrated Security=True;MultipleActiveResultSets=True",
           "sinkOptionsSection": {
             "tableName": "Logs",
             "schemaName": "EventLogging",
