--- a/LOC.PMS.WebAPI/appsettings.json
+++ b/LOC.PMS.WebAPI/appsettings.json
@@ -22,17 +22,17 @@
       //  }
       //},
       //------TODO----Enabling Json log for now, as we are in initial stage of development. but this is huge in size, We need to go back to file & Db back--------
-      {
-        "Name": "File",
-        "Args": {
-          "path": "C:\\Ram\\LOC\\Development\\LOC2022\\Logs\\log.json",
-          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
-        }
-      },
+      //{
+      //  "Name": "File",
+      //  "Args": {
+      //    "path": "C:\\Ram\\LOC\\Development\\LOC2022\\Logs\\log.json",
+      //    "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+      //  }
+      //},
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Data Source=W10LRCADIRVELE\\MSSQL2019;Initial Catalog=PMS;Integrated Security=True;MultipleActiveResultSets=True",
+          "connectionString": "Server=tcp:sqlsrv-ctind-pms-prod.database.windows.net,1433;Initial Catalog=sqldb-ctind-pms-prod;Persist Security Info=False;User ID=acesqladmin;Password=P@$$w0rd@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30",
           "sinkOptionsSection": {
             "tableName": "Logs",
             "schemaName": "EventLogging",
