--- a/LOC.PMS.WebAPI/appsettings.json
+++ b/LOC.PMS.WebAPI/appsettings.json
@@ -1,9 +1,8 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=W10LRCADIRVELE\\MSSQL2019;Initial Catalog=PMS;Integrated Security=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=tcp:sqlsrv-ctind-pms-prod.database.windows.net,1433;Initial Catalog=sqldb-ctind-pms-prod;Persist Security Info=False;User ID=acesqladmin;Password=P@$$w0rd@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
   },
-
   "Serilog": {
     "Using": [],
     "MinimumLevel": {
@@ -14,21 +13,6 @@
       }
     },
     "WriteTo": [
-      //{
-      //  "Name": "File",
-      //  "Args": {
-      //    "path": "C:\\Ram\\LOC\\Development\\LOC2022\\Logs\\log.txt",
-      //    "outputTemplate": "{Timestamp} {Message}{NewLine:1}{Exception:1}"
-      //  }
-      //},
-      //------TODO----Enabling Json log for now, as we are in initial stage of development. but this is huge in size, We need to go back to file & Db back--------
-      //{
-      //  "Name": "File",
-      //  "Args": {
-      //    "path": "C:\\Ram\\LOC\\Development\\LOC2022\\Logs\\log.json",
-      //    "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
-      //  }
-      //},
       {
         "Name": "MSSqlServer",
         "Args": {
@@ -52,5 +36,8 @@
     "Properties": {
       "ApplicationName": "LOC.PMS.WebAPI"
     }
+  },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=045bdcb5-08d1-4a4b-94d2-02dbcda55f12;IngestionEndpoint=https://centralindia-0.in.applicationinsights.azure.com/"
   }
 }
