--- a/.gitignore
+++ b/.gitignore
@@ -340,3 +340,4 @@ ASALocalRun/
 healthchecksdb
 /.github/workflows/ace-pms-api.yml
 /LOC.PMS.WebAPI/Properties/ServiceDependencies/ace-pms-api/profile.arm.json
+/LOC.PMS.WebAPI/Properties/ServiceDependencies
