Pallet part Qty inclusion.

--- a/.gitignore
+++ b/.gitignore
@@ -341,3 +341,4 @@ healthchecksdb
 /.github/workflows/ace-pms-api.yml
 /LOC.PMS.WebAPI/Properties/ServiceDependencies/ace-pms-api/profile.arm.json
 /LOC.PMS.WebAPI/Properties/ServiceDependencies
+/LOC.PMS.WebAPI/.config/dotnet-tools.json
