Included Email and Sms notification.

--- a/LOC.PMS.WebAPI/appsettings.json
+++ b/LOC.PMS.WebAPI/appsettings.json
@@ -39,5 +39,15 @@
   },
   "ApplicationInsights": {
     "ConnectionString": "InstrumentationKey=045bdcb5-08d1-4a4b-94d2-02dbcda55f12;IngestionEndpoint=https://centralindia-0.in.applicationinsights.azure.com/"
+  },
+
+  "NotificationSettings": {
+    "SMSNotification": {
+      "FromNumber": "+18484045850"
+    },
+
+    "EmailNotification": {
+      "FromEmail": "admin@acedigitaltech.onmicrosoft.com"
+    }
   }
 }
