--- a/LOC.PMS.WebAPI/Properties/launchSettings.json
+++ b/LOC.PMS.WebAPI/Properties/launchSettings.json
@@ -14,7 +14,10 @@
       "launchBrowser": true,
       "launchUrl": "swagger/index.html",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SENDGRID_API_KEY": "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",
+        "TWILIO_AUTH_TOKEN": "acc223a05f1bba71c306e90d55de7150",
+        "TWILIO_ACCOUNT_SID": "ACdfaba2601ec4a53ee326361856061776"
       }
     },
     "LOC.PMS.WebAPI": {
@@ -23,7 +26,10 @@
       "launchUrl": "swagger/index.html",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SENDGRID_API_KEY": "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",
+        "TWILIO_AUTH_TOKEN": "acc223a05f1bba71c306e90d55de7150",
+        "TWILIO_ACCOUNT_SID": "ACdfaba2601ec4a53ee326361856061776"
       }
     }
   }
