--- a/LOC.PMS.WebAPI/appsettings.json
+++ b/LOC.PMS.WebAPI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    //"DefaultConnection": "Server=DESKTOP-35F3DIE\\SQLEXPRESS;Initial Catalog=sqldb-ctind-pms-prod;Persist Security Info=False;User ID=sa;Password=Muthu123@;MultipleActiveResultSets=False;Connection Timeout=180"
     "DefaultConnection": "Server=tcp:sqlsrv-ctind-pms-prod.database.windows.net,1433;Initial Catalog=sqldb-ctind-pms-prod;Persist Security Info=False;User ID=acesqladmin;Password=P@$$w0rd@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
   },
   "Serilog": {
@@ -16,6 +17,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
+          //"connectionString": "Server=DESKTOP-35F3DIE\\SQLEXPRESS;Initial Catalog=sqldb-ctind-pms-prod;Persist Security Info=False;User ID=sa;Password=Muthu123@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=180",
           "connectionString": "Server=tcp:sqlsrv-ctind-pms-prod.database.windows.net,1433;Initial Catalog=sqldb-ctind-pms-prod;Persist Security Info=False;User ID=acesqladmin;Password=P@$$w0rd@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30",
           "sinkOptionsSection": {
             "tableName": "Logs",
