--- a/LOC.PMS.WebAPI/Properties/launchSettings.json
+++ b/LOC.PMS.WebAPI/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "SENDGRID_API_KEY": "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",
-        "TWILIO_AUTH_TOKEN": "n2sacbMfy7PWr5tEfELX7JaFTwokxDyk",
+        "TWILIO_AUTH_TOKEN": "n2sacbMfy7PWr5tEfELX7JaFTwokxDyk", ////, 
         "TWILIO_ACCOUNT_SID": "SKced81051d6f39aff7eda1633bd14e35b"
       }
     },
