--- a/LOC.PMS.WebAPI/appsettings.json
+++ b/LOC.PMS.WebAPI/appsettings.json
@@ -49,7 +49,10 @@
     },
 
     "EmailNotification": {
-      "FromEmail": "admin@acedigitaltech.onmicrosoft.com"
+      "FromEmail": "admin@acedigitaltech.onmicrosoft.com",
+      "SENDGRID_API_KEY": "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"
+
+
     }
   }
 }
